fix bag with overflow in menu

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -79,6 +79,7 @@
       background-color: transparent;
       width: auto;
       position: static;
+      overflow: initial;
     }
     margin-right: 20px;
   }
